Adding contrib qunit.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-browserify": "^2.1.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "underscore": "^1.6.0"
   }
