--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "url": "https://github.com/bitovi/testee-client/issues"
   },
   "homepage": "https://github.com/bitovi/testee-client",
-  "dependencies": {},
+  "dependencies": {
+    "es6-promise": "^1.0.0"
+  },
   "devDependencies": {
     "bower": "^1.3.4",
     "browserify": "^4.1.8",
