--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testee-client",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Testee testing framework client adapters",
   "main": "dist/testee.js",
   "scripts": {
@@ -14,7 +14,8 @@
     "testing",
     "qunit",
     "mocha",
-    "jasmine"
+    "jasmine",
+    "testee"
   ],
   "author": "David Luecke <david@bitovi.com>",
   "license": "MIT",
@@ -23,7 +24,9 @@
   },
   "homepage": "https://github.com/bitovi/testee-client",
   "dependencies": {
-    "es6-promise": "^1.0.0"
+    "MD5": "^1.2.1",
+    "es6-promise": "^1.0.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "bower": "^1.3.4",
@@ -34,7 +37,6 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "underscore": "^1.6.0"
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
