--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testee-client",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Testee testing framework client adapters",
   "main": "dist/testee.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.1",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-release": "^0.7.0"
   }
 }
