--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "Testee testing framework client adapters",
   "main": "dist/testee.js",
   "scripts": {
-    "test": "grunt test"
+    "jshint": "jshint --config .jshintrc test/*.js src/*.js",
+    "build": "rm -rf dist/ && node build.js",
+    "grunt": "grunt",
+    "test": "npm run jshint && npm run build && npm run grunt",
+    "preversion": "npm test && npm run build",
+    "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
+    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "release:pre": "npm version prerelease && npm publish",
+    "release:patch": "npm version patch && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:major": "npm version major && npm publish"
   },
   "repository": {
     "type": "git",
@@ -17,27 +27,40 @@
     "jasmine",
     "testee"
   ],
+  "system": {
+    "main": "testee-client/index",
+    "directories": {
+      "lib": "src"
+    },
+    "meta": {
+      "core-js/client/core": {
+        "format": "amd"
+      }
+    }
+  },
   "author": "David Luecke <david@bitovi.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bitovi/testee-client/issues"
   },
   "homepage": "https://github.com/bitovi/testee-client",
-  "dependencies": {
-    "es6-promise": "^3.2.1",
-    "md5": "^2.0.0",
-    "underscore": "^1.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "bower": "^1.3.4",
-    "browserify": "^13.1.0",
+    "chai": "^3.5.0",
+    "core-js": "^2.4.1",
     "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-qunit": "^1.2.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-release": "^0.14.0"
+    "install": "^0.8.1",
+    "jasmine-core": "^2.5.1",
+    "jshint": "^2.9.3",
+    "lodash": "^4.15.0",
+    "md5": "^2.2.1",
+    "mocha": "^3.0.2",
+    "qunitjs": "^1.23.1",
+    "socket.io-client": "^1.4.8",
+    "steal": "^1.0.0-rc.3",
+    "steal-tools": "^1.0.0-rc.1",
+    "wolfy87-eventemitter": "^5.1.0"
   }
 }
