--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
+sudo: false
 language: node_js
-node_js: 0.10
-before_script: node node_modules/bower/bin/bower install
-script: npm test
+node_js: node
