--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testee-client",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "Testee testing framework client adapters",
   "main": "dist/testee.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "preversion": "npm test && npm run build",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
     "postversion": "git push --tags && git checkout master && git branch -D release && git push",
-    "release:pre": "npm version prerelease && npm publish",
+    "release:pre": "npm version prerelease && npm publish --tag pre",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish"
