--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testee-client",
-  "version": "0.4.0",
+  "version": "0.4.0-pre.0",
   "description": "Testee testing framework client adapters",
   "main": "dist/testee.js",
   "scripts": {
