Update release process

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist/ && node build.js",
     "grunt": "grunt",
     "test": "npm run jshint && npm run build && npm run grunt",
-    "preversion": "npm test && npm run build",
+    "preversion": "npm test",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
     "postversion": "git push --tags && git checkout master && git branch -D release && git push",
     "release:pre": "npm version prerelease && npm publish --tag pre",
