--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npm run jshint && npm run build && npm run grunt",
     "preversion": "npm test",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
-    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "postversion": "git push --tags && git checkout master && git branch -D release && git push && npm run build",
     "release:pre": "npm version prerelease && npm publish --tag pre",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
