Add Travis publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 sudo: false
 language: node_js
 node_js: node
+deploy:
+  provider: npm
+  email: core@donejs.com
+  api_key:
+    secure: pDxk6Wpnf2aeXOePAKVmA8bZR0wYGCsPIsjnqsaEIJbouOVuUJG6ahyvztujIJn8AquIVLNMFsXuYooQpm7i9wVFfX7hI97LcQ/tICPwyNQOz0T2x0DtDrbTc6FKLXfVm7WMiMGiiGnMLqDdlbmU3TIupMRH7E0q2h6AQkp7Oos=
+  on:
+    tags: true
+    repo: bitovi/testee-client
